--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "pnpm run -r --if-present --aggregate-output build",
-    "build:apps": "pnpm run build && pnpm run -r --if-present --aggregate-output build:app",
-    "build:examples": "pnpm run -r --parallel --if-present --aggregate-output build:tokens",
+    "build": "pnpm run -r --if-present --stream build",
+    "build:apps": "pnpm run build && pnpm run -r --if-present --stream build:app",
+    "build:examples": "pnpm run -r --parallel --if-present --stream build:tokens",
     "changeset": "changeset",
     "inject-license": "node scripts/inject-license.js",
     "dev": "pnpm run -r --parallel --if-present dev",
-    "lint": "pnpm run -r --parallel --if-present --aggregate-output lint",
-    "format": "pnpm run -r --parallel --if-present --aggregate-output format",
-    "test": "pnpm run -r --if-present --aggregate-output --parallel test",
+    "lint": "pnpm run -r --parallel --if-present --stream lint",
+    "format": "pnpm run -r --parallel --if-present --stream format",
+    "test": "pnpm run -r --if-present --stream test",
     "prepublishOnly": "pnpm run build",
     "version": "pnpm run build && changeset version && pnpm i --no-frozen-lockfile"
   },
@@ -19,12 +19,12 @@
     "@biomejs/biome": "^1.8.3",
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.7",
-    "@types/node": "^22.2.0",
+    "@types/node": "^22.4.1",
     "del-cli": "^5.1.0",
-    "execa": "^9.3.0",
+    "execa": "^9.3.1",
     "prettier": "^3.3.3",
     "strip-ansi": "^7.1.0",
-    "stylelint": "^16.8.1",
+    "stylelint": "^16.8.2",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-order": "^6.0.4",
     "typescript": "^5.5.4",
