--- a/www/package.json
+++ b/www/package.json
@@ -24,24 +24,25 @@
     "nanoid": "^5.0.7",
     "react": "19.0.0-rc-1eaccd82-20240816",
     "react-dom": "19.0.0-rc-1eaccd82-20240816",
-    "react-instantsearch": "^7.12.4"
+    "react-instantsearch": "^7.13.0"
   },
   "devDependencies": {
-    "@astrojs/mdx": "^3.1.3",
+    "@astrojs/mdx": "^3.1.4",
     "@astrojs/react": "3.6.0",
     "@astrojs/starlight": "^0.24.5",
     "@terrazzo/storybook": "workspace:^",
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
-    "astro": "^4.13.3",
+    "astro": "^4.14.5",
     "json5": "^2.2.3",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "remark-directive": "^3.0.0",
+    "sharp": "^0.33.5",
     "types-react": "19.0.0-rc.1",
     "types-react-dom": "19.0.0-rc.1",
     "unist-util-visit": "^5.0.0",
-    "vite": "^5.4.0",
+    "vite": "^5.4.2",
     "vite-plugin-sass-dts": "^1.3.25",
     "vite-tsconfig-paths": "^4.3.2"
   },
