--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           version: latest
           run_install: true
+      - run: pnpm run build
       - uses: changesets/action@v1
         with:
           version: pnpm run version
