--- a/biome.json
+++ b/biome.json
@@ -1,10 +1,10 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.6.4/schema.json",
+  "$schema": "https://biomejs.dev/schemas/1.9.1/schema.json",
   "organizeImports": {
     "enabled": false
   },
   "files": {
-    "ignore": ["**/dist/**", "**/package.json"]
+    "ignore": ["**/dist/**", "**/package.json", "*.css"]
   },
   "formatter": {
     "indentStyle": "space",
