--- a/packages/icons/biome.json
+++ b/packages/icons/biome.json
@@ -1,3 +1,11 @@
 {
-  "extends": ["../../biome.json"]
+  "$schema": "https://biomejs.dev/schemas/1.9.1/schema.json",
+  "extends": ["../../biome.json"],
+  "linter": {
+    "rules": {
+      "a11y": {
+        "noInteractiveElementToNoninteractiveRole": "off"
+      }
+    }
+  }
 }
