--- a/package.json
+++ b/package.json
@@ -2,32 +2,34 @@
   "name": "@terrazzo/monorepo",
   "private": true,
   "type": "module",
+  "packageManager": "pnpm@9.12.1",
   "scripts": {
-    "build": "pnpm run -r --if-present --stream build",
-    "build:apps": "pnpm run build && pnpm run -r --if-present --stream build:app",
+    "build": "turbo run build",
+    "build:apps": "turbo run build:app",
     "build:examples": "pnpm run -r --parallel --if-present --stream build:tokens",
     "changeset": "changeset",
     "inject-license": "node scripts/inject-license.js",
     "dev": "pnpm run -r --parallel --if-present dev",
-    "lint": "pnpm run -r --parallel --if-present --stream lint",
+    "lint": "turbo run lint",
     "format": "pnpm run -r --parallel --if-present --stream format",
-    "test": "pnpm run -r --if-present --stream test",
+    "test": "turbo run test",
     "prepublishOnly": "pnpm run build",
     "version": "pnpm run build && changeset version && pnpm i --no-frozen-lockfile"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.1",
+    "@biomejs/biome": "^1.9.3",
     "@changesets/changelog-github": "^0.5.0",
-    "@changesets/cli": "^2.27.8",
-    "@types/node": "^22.5.0",
+    "@changesets/cli": "^2.27.9",
+    "@types/node": "^22.7.5",
     "del-cli": "^5.1.0",
-    "execa": "^9.3.1",
+    "execa": "^9.4.0",
     "prettier": "^3.3.3",
     "strip-ansi": "^7.1.0",
-    "stylelint": "^16.9.0",
+    "stylelint": "^16.10.0",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-order": "^6.0.4",
-    "typescript": "^5.6.2",
-    "vitest": "^2.1.1"
+    "turbo": "^2.1.3",
+    "typescript": "^5.6.3",
+    "vitest": "^2.1.3"
   }
 }
