--- a/packages/plugin-css/tsconfig.json
+++ b/packages/plugin-css/tsconfig.json
@@ -4,5 +4,5 @@
     "baseUrl": ".",
     "outDir": "./dist/"
   },
-  "include": ["src", "test"]
+  "include": ["src", "test", "../cli/test/fixtures/build-default"]
 }
