--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "type": "module",
   "packageManager": "pnpm@9.12.2",
   "scripts": {
-    "build": "turbo run build",
-    "build:apps": "turbo run build:app",
+    "build": "nx run-many -t build --verbose",
+    "build:apps": "nx run-many -t build:app --verbose",
     "build:examples": "pnpm run -r --parallel --if-present --stream build:tokens",
     "changeset": "changeset",
     "inject-license": "node scripts/inject-license.js",
-    "dev": "pnpm run -r --parallel --if-present dev",
-    "lint": "turbo run lint",
-    "format": "pnpm run -r --parallel --if-present --stream format",
-    "test": "turbo run test",
+    "dev": "nx run-many -t dev --verbose",
+    "lint": "nx run-many -t lint --verbose",
+    "format": "nx run-many -t format --verbose",
+    "test": "nx run-many -t test --verbose",
     "prepublishOnly": "pnpm run build",
     "version": "pnpm run build && changeset version && pnpm i --no-frozen-lockfile"
   },
@@ -20,14 +20,15 @@
     "@biomejs/biome": "^1.9.4",
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.9",
+    "@nx/web": "20.0.5",
     "@types/node": "^22.7.9",
     "execa": "^9.4.1",
+    "nx": "20.0.5",
     "prettier": "^3.3.3",
     "strip-ansi": "^7.1.0",
     "stylelint": "^16.10.0",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-order": "^6.0.4",
-    "turbo": "^2.2.3",
     "typescript": "^5.6.3",
     "vitest": "^2.1.3"
   }
