--- a/packages/plugin-tailwind/package.json
+++ b/packages/plugin-tailwind/package.json
@@ -23,8 +23,7 @@
   },
   "main": "./dist/index.js",
   "scripts": {
-    "build": "pnpm run build:clean && pnpm run build:ts && pnpm -w run inject-license @terrazzo/plugin-tailwind dist/index.js",
-    "build:clean": "del-cli dist",
+    "build": "pnpm run build:ts && pnpm -w run inject-license @terrazzo/plugin-tailwind dist/index.js",
     "build:ts": "tsc -p tsconfig.build.json",
     "format": "biome format --write .",
     "dev": "tsc -p tsconfig.build.json -w",
