--- a/packages/react-color-picker/package.json
+++ b/packages/react-color-picker/package.json
@@ -30,7 +30,7 @@
     "format": "pnpm run \"/&lint:.*/\"",
     "format:js": "biome format --write \"src/**/*.js\"",
     "format:css": "stylelint --fix \"src/**/*.css\"",
-    "lint": "pnpm run \"/^lint:.*/\"",
+    "lint": "pnpm --filter @terrazzo/react-color-picker run \"/^lint:.*/\"",
     "lint:js": "biome check src",
     "lint:css": "stylelint \"src/**/*.css\"",
     "test": "pnpm --filter @terrazzo/react-color-picker run \"/^test:.*/\"",
