--- a/packages/tiles/package.json
+++ b/packages/tiles/package.json
@@ -20,7 +20,7 @@
     "format": "pnpm run \"/&lint:.*/\"",
     "format:js": "biome format --write \"src/**/*.js\"",
     "format:css": "stylelint --fix \"src/**/*.css\"",
-    "lint": "pnpm run \"/^lint:.*/\"",
+    "lint": "pnpm --filter @terrazzo/tiles run \"/^lint:.*/\"",
     "lint:js": "biome check src",
     "lint:css": "stylelint \"src/**/*.css\"",
     "test": "pnpm --filter @terrazzo/tiles run \"/^test.*/\"",
