--- a/packages/tiles/biome.json
+++ b/packages/tiles/biome.json
@@ -4,7 +4,8 @@
   "linter": {
     "rules": {
       "a11y": {
-        "useFocusableInteractive": "off"
+        "useFocusableInteractive": "off",
+        "noNoninteractiveTabindex": "off"
       }
     }
   }
