--- a/packages/plugin-css/biome.json
+++ b/packages/plugin-css/biome.json
@@ -3,6 +3,6 @@
   "extends": ["../../biome.json"],
   "files": {
     "include": ["./src/", "./test/"],
-    "ignore": ["./test/fixtures/**/*.json"]
+    "ignore": ["./test/fixtures/**/*.json", "./test/fixtures/**/*.css"]
   }
 }
