Token Lab Add color token scaffolding (#327)
* Add code loading

* Add token nav

* Add color tokens

* Fix type errors

* Fix lint

--- a/packages/token-lab/package.json
+++ b/packages/token-lab/package.json
@@ -20,7 +20,10 @@
   "license": "MIT",
   "main": "./dist/index.js",
   "scripts": {
-    "dev": "vite dev",
+    "dev": "pnpm run prepare:monaco && vite dev",
+    "build:app": "pnpm run prepare:monaco && vite build",
+    "prepare:monaco": "rm -rf public/monaco-editor && mkdir public/monaco-editor && cp -r node_modules/monaco-editor/esm public/monaco-editor/esm",
+    "preview": "vite preview",
     "format": "biome check --fix --unsafe src",
     "lint": "pnpm run --filter @terrazzo/token-lab \"/^lint:/\"",
     "lint:js": "biome check src",
@@ -33,11 +36,12 @@
   "dependencies": {
     "@terrazzo/fonts": "workspace:^",
     "@terrazzo/icons": "workspace:^",
-    "@terrazzo/react-color-picker": "workspace:^",
     "@terrazzo/parser": "workspace:^",
+    "@terrazzo/react-color-picker": "workspace:^",
     "@terrazzo/tiles": "workspace:^",
     "@terrazzo/token-tools": "workspace:^",
     "@terrazzo/tokens": "workspace:^",
+    "@terrazzo/use-color": "workspace:^",
     "clsx": "^2.1.1",
     "dtcg-examples": "^0.0.1",
     "jotai": "^2.10.1",
