Fix duration 0 missing units

--- a/biome.json
+++ b/biome.json
@@ -38,6 +38,7 @@
       },
       "suspicious": {
         "noConsoleLog": "error",
+        "noFallthroughSwitchClause": "error",
         "noExplicitAny": "warn"
       }
     }
