--- a/packages/react-color-picker/tsconfig.json
+++ b/packages/react-color-picker/tsconfig.json
@@ -2,7 +2,10 @@
   "extends": "../../tsconfig.react.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "outDir": "dist"
+    "outDir": "dist",
+    "module": "NodeNext",
+    "moduleResolution": "nodenext",
+    "skipLibCheck": true
   },
   "include": ["src"]
 }
