--- a/packages/token-lab/package.json
+++ b/packages/token-lab/package.json
@@ -51,8 +51,8 @@
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
     "@vitejs/plugin-react-swc": "^3.7.1",
-    "react": "19.0.0-rc-cae764ce-20241025",
-    "react-dom": "19.0.0-rc-cae764ce-20241025",
+    "react": "19.0.0-rc.1",
+    "react-dom": "19.0.0-rc.1",
     "types-react": "19.0.0-rc.1",
     "types-react-dom": "19.0.0-rc.1",
     "vite": "^5.4.11",
