--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,8 +3,8 @@
     "declaration": true,
     "esModuleInterop": true,
     "lib": ["DOM", "ESNext"],
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
+    "module": "NodeNext",
+    "moduleResolution": "nodenext",
     "noEmitOnError": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedIndexedAccess": true,
