--- a/www/tsconfig.json
+++ b/www/tsconfig.json
@@ -9,8 +9,8 @@
     "jsx": "react-jsx",
     "jsxImportSource": "react",
     "lib": ["DOM", "DOM.Iterable", "ES2022"],
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
+    "module": "NodeNext",
+    "moduleResolution": "nodenext",
     "noEmit": true,
     "noEmitOnError": false,
     "resolveJsonModule": true,
