--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -26,9 +26,9 @@
     "@rollup/plugin-typescript": "^12.1.1",
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
-    "react": "19.0.0-rc-cae764ce-20241025",
-    "react-dom": "19.0.0-rc-cae764ce-20241025",
-    "rollup": "^4.26.0",
+    "react": "19.0.0-rc.1",
+    "react-dom": "19.0.0-rc.1",
+    "rollup": "^4.27.2",
     "rollup-plugin-import-css": "^3.5.6",
     "types-react": "19.0.0-rc.1",
     "types-react-dom": "19.0.0-rc.1"
