--- a/packages/react-color-picker/package.json
+++ b/packages/react-color-picker/package.json
@@ -61,9 +61,9 @@
     "chokidar-cli": "^3.0.0",
     "culori": "^4.0.1",
     "jsdom": "^24.1.3",
-    "react": "19.0.0-rc-cae764ce-20241025",
-    "react-dom": "19.0.0-rc-cae764ce-20241025",
-    "rollup": "^4.26.0",
+    "react": "19.0.0-rc.1",
+    "react-dom": "19.0.0-rc.1",
+    "rollup": "^4.27.2",
     "rollup-plugin-import-css": "^3.5.6",
     "size-limit": "^11.1.6",
     "types-react": "19.0.0-rc.1",
