--- a/packages/react-color-picker/tsconfig.build.json
+++ b/packages/react-color-picker/tsconfig.build.json
@@ -1,4 +1,8 @@
 {
   "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "module": "NodeNext",
+    "moduleResolution": "nodenext"
+  },
   "exclude": ["**/__test__/**", "**/*.test.*"]
 }
