--- a/packages/tiles/package.json
+++ b/packages/tiles/package.json
@@ -41,7 +41,7 @@
     "@use-gesture/react": "^10.3.1",
     "clsx": "^2.1.1",
     "culori": "^4.0.1",
-    "shiki": "^1.22.2",
+    "shiki": "^1.23.0",
     "vite": "^5.4.11"
   },
   "devDependencies": {
@@ -52,9 +52,9 @@
     "@types/react-dom": "npm:types-react-dom@rc",
     "@vitejs/plugin-react-swc": "^3.7.1",
     "chokidar-cli": "^3.0.0",
-    "react": "19.0.0-rc-cae764ce-20241025",
-    "react-dom": "19.0.0-rc-cae764ce-20241025",
-    "rollup": "^4.26.0",
+    "react": "19.0.0-rc.1",
+    "react-dom": "19.0.0-rc.1",
+    "rollup": "^4.27.2",
     "rollup-plugin-import-css": "^3.5.6",
     "size-limit": "^11.1.6",
     "types-react": "19.0.0-rc.1",
