--- a/packages/use-color/package.json
+++ b/packages/use-color/package.json
@@ -44,8 +44,8 @@
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
     "@vitejs/plugin-react-swc": "^3.7.1",
-    "react": "19.0.0-rc-cae764ce-20241025",
-    "react-dom": "19.0.0-rc-cae764ce-20241025",
+    "react": "19.0.0-rc.1",
+    "react-dom": "19.0.0-rc.1",
     "size-limit": "^11.1.6",
     "types-react": "19.0.0-rc.1",
     "types-react-dom": "19.0.0-rc.1"
