--- a/www/package.json
+++ b/www/package.json
@@ -20,11 +20,11 @@
     "@terrazzo/token-lab": "workspace:^",
     "@terrazzo/tokens": "workspace:^",
     "@terrazzo/use-color": "workspace:^",
-    "algoliasearch": "^5.13.0",
+    "algoliasearch": "^5.14.2",
     "nanoid": "^5.0.8",
-    "react": "19.0.0-rc-cae764ce-20241025",
-    "react-dom": "19.0.0-rc-cae764ce-20241025",
-    "react-instantsearch": "^7.13.7"
+    "react": "19.0.0-rc.1",
+    "react-dom": "19.0.0-rc.1",
+    "react-instantsearch": "^7.13.8"
   },
   "devDependencies": {
     "@astrojs/mdx": "^3.1.9",
@@ -32,7 +32,7 @@
     "@terrazzo/storybook": "workspace:^",
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
-    "astro": "^4.16.10",
+    "astro": "^4.16.13",
     "json5": "^2.2.3",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
@@ -41,9 +41,9 @@
     "types-react": "19.0.0-rc.1",
     "types-react-dom": "19.0.0-rc.1",
     "unist-util-visit": "^5.0.0",
-    "vite": "^5.4.10",
+    "vite": "^5.4.11",
     "vite-plugin-sass-dts": "^1.3.29",
-    "vite-tsconfig-paths": "^5.1.0"
+    "vite-tsconfig-paths": "^5.1.2"
   },
   "overrides": {
     "@types/react": "npm:types-react@rc",
