--- a/packages/parser/biome.json
+++ b/packages/parser/biome.json
@@ -4,5 +4,12 @@
   "files": {
     "ignore": ["./lib/code-frame.js"],
     "include": ["./src/", "./test/"]
+  },
+  "linter": {
+    "rules": {
+      "suspicious": {
+        "noExplicitAny": "off"
+      }
+    }
   }
 }
