--- a/www/package.json
+++ b/www/package.json
@@ -12,7 +12,7 @@
     "preview": "astro preview"
   },
   "dependencies": {
-    "@cobalt-ui/core": "^1.11.3",
+    "@cobalt-ui/core": "^1.12.0",
     "@terrazzo/fonts": "workspace:^",
     "@terrazzo/icons": "workspace:^",
     "@terrazzo/react-color-picker": "workspace:^",
@@ -20,11 +20,12 @@
     "@terrazzo/token-lab": "workspace:^",
     "@terrazzo/tokens": "workspace:^",
     "@terrazzo/use-color": "workspace:^",
-    "algoliasearch": "^5.14.2",
+    "algoliasearch": "^5.15.0",
     "nanoid": "^5.0.8",
     "react": "19.0.0-rc.1",
     "react-dom": "19.0.0-rc.1",
-    "react-instantsearch": "^7.13.8"
+    "react-instantsearch": "^7.13.8",
+    "shiki": "^1.23.1"
   },
   "devDependencies": {
     "@astrojs/mdx": "^3.1.9",
@@ -32,8 +33,7 @@
     "@terrazzo/storybook": "workspace:^",
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
-    "astro": "^4.16.13",
-    "json5": "^2.2.3",
+    "astro": "^4.16.14",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "remark-directive": "^3.0.0",
@@ -43,7 +43,7 @@
     "unist-util-visit": "^5.0.0",
     "vite": "^5.4.11",
     "vite-plugin-sass-dts": "^1.3.29",
-    "vite-tsconfig-paths": "^5.1.2"
+    "vite-tsconfig-paths": "^5.1.3"
   },
   "overrides": {
     "@types/react": "npm:types-react@rc",
