--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -43,6 +43,7 @@
     "is-what": "^4.1.16",
     "merge-anything": "^5.1.7",
     "picocolors": "^1.1.1",
+    "scule": "^1.3.0",
     "wildcard-match": "^5.1.3",
     "yaml": "^2.6.1"
   },
