--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -55,8 +55,7 @@
     "dotenv": "^16.4.5",
     "merge-anything": "^5.1.7",
     "picocolors": "^1.1.1",
-    "yaml-to-momoa": "^0.0.3",
-    "yargs-parser": "^21.1.1"
+    "yaml-to-momoa": "^0.0.3"
   },
   "devDependencies": {
     "typescript": "^5.7.2"
