--- a/packages/tiles/package.json
+++ b/packages/tiles/package.json
@@ -15,8 +15,8 @@
   },
   "main": "./dist/index.js",
   "scripts": {
-    "build": "rollup -c rollup.config.js && size-limit",
-    "dev": "pnpm run build && chokidar \"src/**/*\" -c \"rollup -c rollup.config.js\"",
+    "build": "rolldown -c rolldown.config.js && size-limit",
+    "dev": "pnpm run build && chokidar \"src/**/*\" -c \"rolldown -c rolldown.config.js\"",
     "format": "pnpm --filter @terrazzo/tiles run \"/^format:/\"",
     "format:js": "biome check --fix --unsafe src",
     "format:css": "stylelint --fix \"src/**/*.css\"",
@@ -54,8 +54,7 @@
     "chokidar-cli": "^3.0.0",
     "react": "19.0.0-rc.1",
     "react-dom": "19.0.0-rc.1",
-    "rollup": "^4.27.2",
-    "rollup-plugin-import-css": "^3.5.6",
+    "rolldown": "0.14.0-snapshot-1cfa47c-20241129015040",
     "size-limit": "^11.1.6",
     "types-react": "19.0.0-rc.1",
     "types-react-dom": "19.0.0-rc.1",
