--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -4,7 +4,8 @@
     "baseUrl": ".",
     "module": "NodeNext",
     "moduleResolution": "nodenext",
-    "outDir": "./dist/"
+    "outDir": "./dist/",
+    "skipLibCheck": true
   },
   "include": ["src", "test"]
 }
