--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -49,15 +49,17 @@
     "test:ts": "tsc --noEmit"
   },
   "dependencies": {
+    "@clack/prompts": "^0.8.2",
     "@terrazzo/parser": "workspace:^",
     "@terrazzo/token-tools": "workspace:^",
+    "@types/escodegen": "^0.0.10",
     "chokidar": "^3.6.0",
+    "detect-package-manager": "^3.0.2",
     "dotenv": "^16.4.5",
+    "escodegen": "^2.1.0",
     "merge-anything": "^5.1.7",
+    "meriyah": "^6.0.3",
     "picocolors": "^1.1.1",
     "yaml-to-momoa": "^0.0.3"
-  },
-  "devDependencies": {
-    "typescript": "^5.7.2"
   }
 }
