Add tz normalize

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "@clack/prompts": "^0.8.2",
+    "@humanwhocodes/momoa": "^3.3.4",
     "@terrazzo/parser": "workspace:^",
     "@terrazzo/token-tools": "workspace:^",
     "@types/escodegen": "^0.0.10",
