--- a/packages/plugin-js/package.json
+++ b/packages/plugin-js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@terrazzo/plugin-js",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "Generate JS, TS, and JSON from your design tokens schema (requires @terrazzo/cli)",
   "type": "module",
   "author": {
@@ -36,11 +36,9 @@
   "peerDependencies": {
     "@terrazzo/cli": "workspace:^"
   },
-  "dependencies": {
-    "@terrazzo/token-tools": "workspace:^"
-  },
   "devDependencies": {
     "@terrazzo/cli": "workspace:^",
-    "@terrazzo/parser": "workspace:^"
+    "@terrazzo/parser": "workspace:^",
+    "@terrazzo/token-tools": "workspace:^"
   }
 }
