--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -24,17 +24,11 @@
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^12.1.1",
-    "@types/react": "npm:types-react@rc",
-    "@types/react-dom": "npm:types-react-dom@rc",
-    "react": "19.0.0-rc.1",
-    "react-dom": "19.0.0-rc.1",
-    "rollup": "^4.27.2",
-    "rollup-plugin-import-css": "^3.5.6",
-    "types-react": "19.0.0-rc.1",
-    "types-react-dom": "19.0.0-rc.1"
-  },
-  "overrides": {
-    "@types/react": "npm:types-react@rc",
-    "@types/react-dom": "npm:types-react-dom@rc"
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "rollup": "^4.28.1",
+    "rollup-plugin-import-css": "^3.5.7"
   }
 }
