--- a/packages/tiles/package.json
+++ b/packages/tiles/package.json
@@ -41,28 +41,21 @@
     "@use-gesture/react": "^10.3.1",
     "clsx": "^2.1.1",
     "culori": "^4.0.1",
-    "shiki": "^1.24.0",
-    "vite": "^6.0.1"
+    "shiki": "^1.24.0"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^12.1.1",
     "@size-limit/preset-small-lib": "^11.1.6",
     "@types/culori": "^2.1.1",
-    "@types/react": "npm:types-react@rc",
-    "@types/react-dom": "npm:types-react-dom@rc",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.1",
     "@vitejs/plugin-react-swc": "^3.7.2",
     "chokidar-cli": "^3.0.0",
-    "react": "19.0.0-rc.1",
-    "react-dom": "19.0.0-rc.1",
-    "rollup": "^4.27.4",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "rollup": "^4.28.1",
     "rollup-plugin-import-css": "^3.5.7",
     "size-limit": "^11.1.6",
-    "types-react": "19.0.0-rc.1",
-    "types-react-dom": "19.0.0-rc.1",
     "vitest-axe": "^0.1.0"
-  },
-  "overrides": {
-    "@types/react": "npm:types-react@rc",
-    "@types/react-dom": "npm:types-react-dom@rc"
   }
 }
