--- a/www/package.json
+++ b/www/package.json
@@ -21,8 +21,8 @@
     "@terrazzo/use-color": "workspace:^",
     "algoliasearch": "^5.15.0",
     "nanoid": "^5.0.9",
-    "react": "19.0.0-rc.1",
-    "react-dom": "19.0.0-rc.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-instantsearch": "^7.13.8",
     "shiki": "^1.24.0"
   },
@@ -30,22 +30,16 @@
     "@astrojs/mdx": "^4.0.1",
     "@astrojs/react": "4.0.0",
     "@terrazzo/storybook": "workspace:^",
-    "@types/react": "npm:types-react@rc",
-    "@types/react-dom": "npm:types-react-dom@rc",
-    "astro": "^5.0.2",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.1",
+    "astro": "^5.0.3",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "remark-directive": "^3.0.0",
     "sharp": "^0.33.5",
-    "types-react": "19.0.0-rc.1",
-    "types-react-dom": "19.0.0-rc.1",
     "unist-util-visit": "^5.0.0",
-    "vite": "^6.0.2",
+    "vite": "^6.0.3",
     "vite-plugin-sass-dts": "^1.3.29",
-    "vite-tsconfig-paths": "^5.1.3"
-  },
-  "overrides": {
-    "@types/react": "npm:types-react@rc",
-    "@types/react-dom": "npm:types-react-dom@rc"
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
