Don’t publish packages

--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -19,8 +19,8 @@
     "lint:js": "biome check ."
   },
   "peerDependencies": {
-    "react": "19.x",
-    "react-dom": "19.x"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^12.1.1",
