--- a/packages/plugin-css/package.json
+++ b/packages/plugin-css/package.json
@@ -33,7 +33,7 @@
     "test:ts": "tsc --noEmit"
   },
   "peerDependencies": {
-    "@terrazzo/cli": "*"
+    "@terrazzo/cli": "^0.2.0"
   },
   "dependencies": {
     "scule": "^1.3.0"
