--- a/www/package.json
+++ b/www/package.json
@@ -12,6 +12,7 @@
     "preview": "astro preview"
   },
   "dependencies": {
+    "@nanostores/react": "^0.8.4",
     "@terrazzo/fonts": "workspace:^",
     "@terrazzo/icons": "workspace:^",
     "@terrazzo/react-color-picker": "workspace:^",
@@ -37,6 +38,7 @@
     "rehype-slug": "^6.0.0",
     "remark-directive": "^3.0.0",
     "sharp": "^0.33.5",
+    "shiki": "^1.24.2",
     "unist-util-visit": "^5.0.0",
     "vite": "^6.0.10",
     "vite-plugin-sass-dts": "^1.3.30",
