--- a/packages/use-color/package.json
+++ b/packages/use-color/package.json
@@ -15,7 +15,7 @@
     "email": "drew@pow.rs"
   },
   "main": "./index.js",
-  "homepage": "https://terrazzoapp.com/docs/components/color-picker",
+  "homepage": "https://terrazzo.app/docs/components/color-picker",
   "repository": {
     "type": "git",
     "url": "https://github.com/terrazzoapp/terrazzo.git",
@@ -41,8 +41,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "^19.0.2",
+    "@types/react": "^19.0.6",
+    "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react-swc": "^3.7.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
