--- a/biome.json
+++ b/biome.json
@@ -49,7 +49,8 @@
       "linter": {
         "rules": {
           "suspicious": {
-            "noExplicitAny": "off"
+            "noExplicitAny": "off",
+            "noShadowRestrictedNames": "error"
           }
         }
       }
