--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -22,7 +22,7 @@
     "lint"
   ],
   "main": "./dist/index.js",
-  "homepage": "https://terrazzoapp.com/docs/cli/api/js",
+  "homepage": "https://terrazzo.app/docs/cli/api/js",
   "repository": {
     "type": "git",
     "url": "https://github.com/terrazzoapp/terrazzo.git",
@@ -36,7 +36,7 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "@humanwhocodes/momoa": "^3.3.5",
+    "@humanwhocodes/momoa": "^3.3.6",
     "@terrazzo/token-tools": "workspace:^",
     "@types/babel__code-frame": "^7.0.6",
     "@types/culori": "^2.1.1",
@@ -45,8 +45,8 @@
     "merge-anything": "^5.1.7",
     "picocolors": "^1.1.1",
     "scule": "^1.3.0",
-    "wildcard-match": "^5.1.3",
-    "yaml": "^2.6.1"
+    "wildcard-match": "^5.1.4",
+    "yaml": "^2.7.0"
   },
   "devDependencies": {
     "esbuild": "^0.23.1",
