--- a/packages/plugin-css/package.json
+++ b/packages/plugin-css/package.json
@@ -15,7 +15,7 @@
     "css"
   ],
   "main": "./dist/index.js",
-  "homepage": "https://terrazzoapp.com/docs/cli/integrations/css",
+  "homepage": "https://terrazzo.app/docs/cli/integrations/css",
   "repository": {
     "type": "git",
     "url": "https://github.com/terrazzoapp/terrazzo.git",
