--- a/packages/plugin-swift/package.json
+++ b/packages/plugin-swift/package.json
@@ -9,7 +9,7 @@
     "name": "Drew Powers",
     "email": "drew@pow.rs"
   },
-  "homepage": "https://terrazzoapp.com/docs/cli/integrations/swift",
+  "homepage": "https://terrazzo.app/docs/cli/integrations/swift",
   "repository": {
     "type": "git",
     "url": "https://github.com/terrazzoapp/terrazzo.git",
