--- a/packages/react-color-picker/package.json
+++ b/packages/react-color-picker/package.json
@@ -18,7 +18,7 @@
     "picker"
   ],
   "main": "./dist/index.js",
-  "homepage": "https://terrazzoapp.com/docs/components/color-picker",
+  "homepage": "https://terrazzo.app/docs/components/color-picker",
   "repository": {
     "type": "git",
     "url": "git+terrazzoapp/terrazzo.git",
@@ -55,15 +55,15 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@types/culori": "^2.1.1",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "^19.0.2",
+    "@types/react": "^19.0.6",
+    "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react-swc": "^3.7.2",
     "chokidar-cli": "^3.0.0",
     "culori": "^4.0.1",
     "jsdom": "^24.1.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "rollup": "^4.29.1",
+    "rollup": "^4.30.1",
     "rollup-plugin-import-css": "^3.5.8",
     "size-limit": "^11.1.6",
     "vitest-axe": "^0.1.0"
