--- a/packages/plugin-js/package.json
+++ b/packages/plugin-js/package.json
@@ -36,9 +36,11 @@
   "peerDependencies": {
     "@terrazzo/cli": "^0.3.3"
   },
+  "dependencies": {
+    "@terrazzo/token-tools": "workspace:^"
+  },
   "devDependencies": {
     "@terrazzo/cli": "workspace:^",
-    "@terrazzo/parser": "workspace:^",
-    "@terrazzo/token-tools": "workspace:^"
+    "@terrazzo/parser": "workspace:^"
   }
 }
