--- a/packages/plugin-tailwind/package.json
+++ b/packages/plugin-tailwind/package.json
@@ -33,8 +33,8 @@
     "--disabled--test:ts": "tsc --noEmit"
   },
   "peerDependencies": {
-    "@terrazzo/cli": "^0.3.3",
-    "@terrazzo/plugin-css": "^0.3.0",
+    "@terrazzo/cli": "0.x",
+    "@terrazzo/plugin-css": "0.x",
     "tailwindcss": "*"
   },
   "dependencies": {
