--- a/packages/plugin-swift/package.json
+++ b/packages/plugin-swift/package.json
@@ -30,7 +30,7 @@
     "test": "vitest run"
   },
   "peerDependencies": {
-    "@terrazzo/cli": "^0.x"
+    "@terrazzo/cli": "0.x"
   },
   "dependencies": {
     "@terrazzo/token-tools": "workspace:^",
