--- a/packages/token-lab/package.json
+++ b/packages/token-lab/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^19.0.0"
   },
   "dependencies": {
+    "@radix-ui/react-popover": "^1.1.5",
     "@terrazzo/fonts": "workspace:^",
     "@terrazzo/icons": "workspace:^",
     "@terrazzo/parser": "workspace:^",
