ci: bypass turbo on windows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,4 +61,4 @@ jobs:
         with:
           version: 9.15.4
           run_install: true
-      - run: pnpm test
+      - run: pnpm -r build && pnpm -r test
