--- a/packages/token-lab/biome.json
+++ b/packages/token-lab/biome.json
@@ -5,7 +5,15 @@
     "rules": {
       "a11y": {
         "useSemanticElements": "off"
+      },
+      "suspicious": {
+        "noArrayIndexKey": "off"
       }
+    }
+  },
+  "css": {
+    "parser": {
+      "cssModules": true
     }
   }
 }
