--- a/www/package.json
+++ b/www/package.json
@@ -19,27 +19,28 @@
     "@terrazzo/token-lab": "workspace:^",
     "@terrazzo/tokens": "workspace:^",
     "@terrazzo/use-color": "workspace:^",
-    "algoliasearch": "^5.20.3",
-    "nanoid": "^5.1.0",
+    "algoliasearch": "^5.20.4",
+    "nanoid": "^5.1.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-instantsearch": "^7.15.3",
+    "react-instantsearch": "^7.15.4",
     "shiki": "^1.29.2"
   },
   "devDependencies": {
-    "@astrojs/mdx": "^4.0.8",
+    "@astrojs/mdx": "^4.1.0",
     "@astrojs/react": "4.1.2",
+    "@astrojs/sitemap": "^3.2.1",
     "@terrazzo/storybook": "workspace:^",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "astro": "^5.3.0",
+    "astro": "^5.4.2",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "remark-directive": "^3.0.1",
     "sharp": "^0.33.5",
     "unist-util-visit": "^5.0.0",
-    "vite": "^6.1.0",
-    "vite-plugin-sass-dts": "^1.3.30",
+    "vite": "^6.2.1",
+    "vite-plugin-sass-dts": "^1.3.31",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
