--- a/packages/plugin-tailwind/package.json
+++ b/packages/plugin-tailwind/package.json
@@ -44,6 +44,7 @@
     "@terrazzo/cli": "workspace:^",
     "@terrazzo/parser": "workspace:^",
     "tailwindcss": "^3.4.17",
+    "typescript": "~5.7.3",
     "yaml": "^2.7.0"
   }
 }
