--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "stylelint-config-standard": "^36.0.1",
     "stylelint-order": "^6.0.4",
     "turbo": "^2.4.4",
-    "typescript": "^5.7.3",
+    "typescript": "~5.7.3",
     "vitest": "^3.0.8"
   }
 }
