package token-lab for reuse

--- a/packages/token-lab/tsconfig.json
+++ b/packages/token-lab/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.react.json",
   "compilerOptions": {
+    "incremental": true,
     "baseUrl": ".",
     "outDir": "dist"
   },
