--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -41,6 +41,7 @@
   },
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
+    "build:lab": "vite build",
     "dev": "tsc -p tsconfig.build.json -w",
     "format": "biome check --fix --unsafe .",
     "lint": "biome check .",
@@ -50,8 +51,10 @@
   },
   "dependencies": {
     "@clack/prompts": "^0.9.1",
+    "@hono/node-server": "^1.13.8",
     "@humanwhocodes/momoa": "^3.3.6",
     "@terrazzo/parser": "workspace:^",
+    "@terrazzo/token-lab": "workspace:^",
     "@terrazzo/token-tools": "workspace:^",
     "@types/escodegen": "^0.0.10",
     "chokidar": "^3.6.0",
@@ -60,7 +63,14 @@
     "escodegen": "^2.1.0",
     "merge-anything": "^5.1.7",
     "meriyah": "^6.0.5",
+    "mime": "^4.0.6",
     "picocolors": "^1.1.1",
     "yaml-to-momoa": "^0.0.3"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react-swc": "^3.7.2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "vite": "^6.2.1"
   }
 }
