token lab: onUpdate prop

--- a/packages/token-lab/package.json
+++ b/packages/token-lab/package.json
@@ -26,6 +26,7 @@
   },
   "scripts": {
     "dev": "vite dev",
+    "build": "tsc",
     "build:app": "vite build",
     "preview": "vite preview",
     "format": "biome check --fix --unsafe src",
