feat(cli): embedded server for token lab (#450)
* deduplicate dependencies

* fix pnpm command error "The Syntax of command is incorrect"

* chore: fix type errors on token lab

* package token-lab for reuse

* tz lab command

* token lab: onUpdate prop

* use package.json version of pnpm in workflows

* pnpm biome check --fix

* add server to log groups

* fix test

* format

* organize imports

* adjust test

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@terrazzo/monorepo",
   "private": true,
   "type": "module",
-  "packageManager": "pnpm@9.15.4",
+  "packageManager": "pnpm@10.6.2",
   "scripts": {
     "build": "turbo run build",
     "build:apps": "turbo run build:app",
@@ -27,7 +27,12 @@
     "stylelint-config-standard": "^36.0.1",
     "stylelint-order": "^6.0.4",
     "turbo": "^2.4.4",
-    "typescript": "^5.7.3",
+    "typescript": "~5.7.3",
     "vitest": "^3.0.8"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "vite-plugin-sass-dts": "patches/vite-plugin-sass-dts.patch"
+    }
   }
 }
